--- a/index.html
+++ b/index.html
@@ -7,6 +7,118 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <nav id="header">
+        <ul class="navlist">
+            <li >why?</li>
+            <li>illustration</li>
+            <li>buy</li>
+        </ul>
+    </nav>
     
+    <img src="" alt="1">
+    <section>
+        <article>
+        <h2>absurd illustrations that make sense
+        </h2>
+        <p>What about absurd illustrations for your projects? Take every user on an individual journey through their own imagination.
+        </p>
+        <div>
+            <a href="">1</a>
+            <a href="">2</a>
+        </div>
+    </article>
+    <article>
+        <h2>real beauty resides in imperfection
+        </h2>
+        <p>In a digital era, we sometimes feel the need to interact with something more human that will make us appreciate both the beauty and the imperfection of something made by hand.
+        </p>
+        <img src="" alt="xxx">
+    </article>
+    <article>
+        <h2>expressiveness is... the new black
+        </h2>
+        <p>This series of illustrations paradoxically combines absurdity and a deep sense of childishness and naivety.
+        </p>
+        <img src="" alt="xxx">
+    </article>
+   
+
+    <section>
+        <article>
+            <h2>illustrations for applications
+            </h2>
+            <p>Welcome to my space for experiments! Look at this like a journey we can take together every step of the way, beginning another chapter with each new phase of the project development. And who knows where it will take us?
+            </p>
+        </article>
+        <div>
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+    </div>
+    <article>
+        <h2>examples of use
+        </h2>
+        <p>Each illustration offers the possibility of limitless interpretations and uses and everyone can give it its own meaning. It depends only on each one's creativity and free spirit.
+        </p>
+    </article>
+    </section>
+    <section>
+        <div>
+            <a href="">f</a>
+            <a href="">t</a>
+            <a href="">i</a>
+            <a href="">g</a>
+        </div>
+        <div>
+            <img src="" alt="1">
+            <img src="" alt="2">
+            <img src="" alt="3">
+            <img src="" alt="4">
+            <img src="" alt="5">
+            <img src="" alt="6">
+        </div>
+    </section>
+    <section>
+        <article>
+        <h2>
+            download illustrations
+
+        </h2>
+        <p>You're free to use these illustrations for both personal and commercial projects. And if you want to make a human happy would be nice to give credits by mentioning this website or be my supporter. I have created a membership plan for people who love my works and wish to support me and receive new artwork regularly.
+        </p>
+    </article>
+    <article>
+    <div>
+        <p>membership</p>
+        <h2>$57
+        </h2>
+        <p>per year
+        </p>
+        <p>No link required <br>Unlimited access
+<br>New content regularly
+<br>Colored versions
+<br>PNG format files
+<br>SVG format files
+
+<br>Premium support
+        </p>
+        <a href="">xxx</a>
+    </div>
+</article>
+<div>
+<h2>any absurd suggestions?
+</h2>
+<p>Email
+</p>
+<p>super@super.de</p>
+<p>Follow me</p>
+<div>
+    <a href="">f</a>
+    <a href="">t</a>
+    <a href="">i</a>
+    <a href="">a</a>
+</div>
+</div>
+    </section>
 </body>
 </html>
