--- a/index.html
+++ b/index.html
@@ -9,22 +9,21 @@
 <body>
     <nav id="header">
         <ul class="navlist">
-            <li >why?</li>
-            <li>illustration</li>
-            <li>buy</li>
+            <li><a href="">why?</a></li>
+            <li><a href="">illustration</a></li>
+            <li><a href="">buy</a></li>
         </ul>
     </nav>
     
-    <img src="" alt="1">
     <section>
-        <article>
-        <h2>absurd illustrations that make sense
+        <article id="first">
+        <h2 class="absurd">absurd illustrations that make sense
         </h2>
-        <p>What about absurd illustrations for your projects? Take every user on an individual journey through their own imagination.
+        <p class="para">What about absurd illustrations for your projects? Take every user on an individual journey through their own imagination.
         </p>
         <div>
-            <a href="">1</a>
-            <a href="">2</a>
+            <button class="but1">Download</button>
+            <button class="but2">Subscribe</button>
         </div>
     </article>
     <article>
@@ -32,14 +31,14 @@
         </h2>
         <p>In a digital era, we sometimes feel the need to interact with something more human that will make us appreciate both the beauty and the imperfection of something made by hand.
         </p>
-        <img src="" alt="xxx">
+        <img src="" alt="">
     </article>
     <article>
         <h2>expressiveness is... the new black
         </h2>
         <p>This series of illustrations paradoxically combines absurdity and a deep sense of childishness and naivety.
         </p>
-        <img src="" alt="xxx">
+        <img src="" alt="">
     </article>
    
 
@@ -63,12 +62,7 @@
     </article>
     </section>
     <section>
-        <div>
-            <a href="">f</a>
-            <a href="">t</a>
-            <a href="">i</a>
-            <a href="">g</a>
-        </div>
+       
         <div>
             <img src="" alt="1">
             <img src="" alt="2">
@@ -94,6 +88,7 @@
         </h2>
         <p>per year
         </p>
+        <span></span>
         <p>No link required <br>Unlimited access
 <br>New content regularly
 <br>Colored versions
@@ -101,8 +96,9 @@
 <br>SVG format files
 
 <br>Premium support
+<!-- </span> bei css als block -->
         </p>
-        <a href="">xxx</a>
+       <button>Become Member</button>
     </div>
 </article>
 <div>
@@ -112,7 +108,8 @@
 </p>
 <p>super@super.de</p>
 <p>Follow me</p>
-<div>
+<div> 
+    <!-- als ul umwandeln -->
     <a href="">f</a>
     <a href="">t</a>
     <a href="">i</a>
