--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <nav id="header">
         <ul class="navlist">
@@ -14,108 +16,132 @@
             <li><a href="">buy</a></li>
         </ul>
     </nav>
-    
+
     <section>
         <article id="first">
-        <h2 class="absurd">absurd illustrations that make sense
-        </h2>
-        <p class="para">What about absurd illustrations for your projects? Take every user on an individual journey through their own imagination.
-        </p>
-        <div>
-            <button class="but1">Download</button>
-            <button class="but2">Subscribe</button>
-        </div>
-    </article>
-    <article>
-        <h2>real beauty resides in imperfection
-        </h2>
-        <p>In a digital era, we sometimes feel the need to interact with something more human that will make us appreciate both the beauty and the imperfection of something made by hand.
-        </p>
-        <img src="" alt="">
-    </article>
-    <article>
-        <h2>expressiveness is... the new black
-        </h2>
-        <p>This series of illustrations paradoxically combines absurdity and a deep sense of childishness and naivety.
-        </p>
-        <img src="" alt="">
-    </article>
-   
-
-    <section>
-        <article>
-            <h2>illustrations for applications
+            <h2 class="absurd">absurd illustrations that make sense
             </h2>
-            <p>Welcome to my space for experiments! Look at this like a journey we can take together every step of the way, beginning another chapter with each new phase of the project development. And who knows where it will take us?
+            <p class="para">What about absurd illustrations for your projects? Take every user on an individual journey
+                through their own imagination.
             </p>
+            <div>
+                <button class="but1">Download</button>
+                <button class="but2">Subscribe</button>
+            </div>
         </article>
-        <div>
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-    </div>
-    <article>
-        <h2>examples of use
-        </h2>
-        <p>Each illustration offers the possibility of limitless interpretations and uses and everyone can give it its own meaning. It depends only on each one's creativity and free spirit.
-        </p>
-    </article>
-    </section>
-    <section>
-       
-        <div>
-            <img src="" alt="1">
-            <img src="" alt="2">
-            <img src="" alt="3">
-            <img src="" alt="4">
-            <img src="" alt="5">
-            <img src="" alt="6">
-        </div>
-    </section>
-    <section>
-        <article>
-        <h2>
-            download illustrations
+        <article id="sec2">
+            <h2 class="absurd">real beauty resides in imperfection
+            </h2>
+            <p class="para">In a digital era, we sometimes feel the need to interact with something more human that will
+                make us appreciate both the beauty and the imperfection of something made by hand.
+            </p>
 
-        </h2>
-        <p>You're free to use these illustrations for both personal and commercial projects. And if you want to make a human happy would be nice to give credits by mentioning this website or be my supporter. I have created a membership plan for people who love my works and wish to support me and receive new artwork regularly.
-        </p>
-    </article>
-    <article>
-    <div>
-        <p>membership</p>
-        <h2>$57
-        </h2>
-        <p>per year
-        </p>
-        <span></span>
-        <p>No link required <br>Unlimited access
-<br>New content regularly
-<br>Colored versions
-<br>PNG format files
-<br>SVG format files
+        </article>
+        <article id="sec3">
+            <h2 class="absurd">expressiveness is... the new black
+            </h2>
+            <p class="para">This series of illustrations paradoxically combines absurdity and a deep sense of
+                childishness and naivety.
+            </p>
 
-<br>Premium support
-<!-- </span> bei css als block -->
-        </p>
-       <button>Become Member</button>
-    </div>
-</article>
-<div>
-<h2>any absurd suggestions?
-</h2>
-<p>Email
-</p>
-<p>super@super.de</p>
-<p>Follow me</p>
-<div> 
-    <!-- als ul umwandeln -->
-    <a href="">f</a>
-    <a href="">t</a>
-    <a href="">i</a>
-    <a href="">a</a>
-</div>
-</div>
-    </section>
+        </article>
+
+
+        <section>
+            <article id="sec4">
+                <h2 class="illustration">illustrations for applications
+                </h2>
+                <p>Welcome to my space for experiments! Look at this like a journey we can take together every step of
+                    the way, beginning another chapter with each new phase of the project development. And who knows
+                    where it will take us?
+                </p class="para">
+            </article>
+
+            <div class="pics1">
+                <div class="column">
+                    <img src="/assets/img/illustration4.png" alt="" style="width:100%">
+                </div>
+                <div class="column">
+                    <img src="/assets/img/illustration5.png" alt="" style="width:100%">
+                </div>
+                <div class="column">
+                    <img src="/assets/img/illustration6.png" alt="" style="width:100%">
+                </div>
+            </div>
+            </div>
+            <article id="sec5">
+                <h2 class="sec5h2">examples of use</h2>
+                <p class="sec5p">Each illustration offers the possibility of limitless interpretations and uses and
+                    everyone can give it its own meaning. It depends only on each one's creativity and free spirit.
+                </p>
+            </article>
+        </section>
+        <section class="secpics">
+
+            <div class="pics1">
+                <div><img src="/assets/img/illustration7.jpg" alt="" style="width:100%"></div>
+                <div><img src="/assets/img/illustration8.jpg" alt="" style="width:100%"></div>
+            </div>
+            <div class="pics1">
+                <div><img src="/assets/img/illustration9.jpg" alt="" style="width:100%"></div>
+                <div><img src="/assets/img/illustration10.jpg" alt="" style="width:100%"></div>
+            </div>
+            <div class="pics1">
+                <div><img src="/assets/img/illustration11.jpg" alt="" style="width:100%"></div>
+                <div><img src="/assets/img/illustration12.jpg" alt="" style="width:100%"></div>
+            </div>
+
+        </section>
+        <section id="sec6">
+            <article>
+                <h2 class="illustration">
+                    download illustrations
+
+                </h2>
+                <p class="illusp">You're free to use these illustrations for both personal and commercial projects. And if you want to
+                    make a human happy would be nice to give credits by mentioning this website or be my supporter. I
+                    have created a membership plan for people who love my works and wish to support me and receive new
+                    artwork regularly.
+                </p>
+            </article>
+            <article id="block">
+                <div>
+                    <p>membership</p>
+                    <h2 class="money">$57
+                    </h2>
+                    <p class="peryear">per year
+                    </p>
+
+                    No link required <br>
+                    Unlimited access <br>
+                    New content regularly <br>
+                    Colored versions <br>
+                    PNG format files <br>
+                    SVG format files <br>
+
+                    Premium support
+                    <!-- </span> bei css als block -->
+                    </p>
+                    <button id="but3">Become Member</button>
+                </div>
+            </article>
+            <div>
+                <h2 class="absurd2">any absurd suggestions?
+                </h2>
+                <p class="para2">Email
+                </p>
+                <p>super@super.de</p>
+                <p class="para2">
+                    </pclass>>Follow me</p>
+                <div>
+                    <!-- als ul umwandeln -->
+                    <a href="">f</a>
+                    <a href="">t</a>
+                    <a href="">i</a>
+                    <a href="">a</a>
+                </div>
+            </div>
+        </section>
 </body>
+
 </html>
