now I think I am done

--- a/index.html
+++ b/index.html
@@ -135,10 +135,12 @@
                     </pclass>>Follow me</p>
                 <div>
                     <!-- als ul umwandeln -->
-                    <a href="">f</a>
-                    <a href="">t</a>
-                    <a href="">i</a>
-                    <a href="">a</a>
+                    <ul class="foot">
+                        <li class="footanchor"><a href=""></a><span class="fb"> .</span>fb</li>
+                        <li><a href=""></a><span class="ig"> .</span>ig</li>
+                        <li><a href=""></a><span class="tw"> .</span>tw</li>
+                        <li><a href=""></a><span class="yt"> .</span>yt</li>
+                    </ul>
                 </div>
             </div>
         </section>
